syntax = "proto3";
package virtengine.settlement.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/settlement/v1";

// Msg defines the settlement Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateEscrow creates a new escrow account
  rpc CreateEscrow(MsgCreateEscrow) returns (MsgCreateEscrowResponse);

  // ActivateEscrow activates an escrow when a lease is created
  rpc ActivateEscrow(MsgActivateEscrow) returns (MsgActivateEscrowResponse);

  // ReleaseEscrow releases escrow funds to the recipient
  rpc ReleaseEscrow(MsgReleaseEscrow) returns (MsgReleaseEscrowResponse);

  // RefundEscrow refunds escrow funds to the depositor
  rpc RefundEscrow(MsgRefundEscrow) returns (MsgRefundEscrowResponse);

  // DisputeEscrow marks an escrow as disputed
  rpc DisputeEscrow(MsgDisputeEscrow) returns (MsgDisputeEscrowResponse);

  // SettleOrder settles an order based on usage records
  rpc SettleOrder(MsgSettleOrder) returns (MsgSettleOrderResponse);

  // RecordUsage records usage from a provider
  rpc RecordUsage(MsgRecordUsage) returns (MsgRecordUsageResponse);

  // AcknowledgeUsage acknowledges a usage record
  rpc AcknowledgeUsage(MsgAcknowledgeUsage) returns (MsgAcknowledgeUsageResponse);

  // ClaimRewards claims accumulated rewards
  rpc ClaimRewards(MsgClaimRewards) returns (MsgClaimRewardsResponse);
}

// MsgCreateEscrow creates a new escrow account
message MsgCreateEscrow {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgCreateEscrow";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_id = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
  uint64 expires_in = 4;
}

// MsgCreateEscrowResponse is the response for MsgCreateEscrow
message MsgCreateEscrowResponse {
  string escrow_id = 1;
  int64 created_at = 2;
}

// MsgActivateEscrow activates an escrow when a lease is created
message MsgActivateEscrow {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgActivateEscrow";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string escrow_id = 2;
  string lease_id = 3;
  string recipient = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgActivateEscrowResponse is the response for MsgActivateEscrow
message MsgActivateEscrowResponse {
  int64 activated_at = 1;
}

// MsgReleaseEscrow releases escrow funds to the recipient
message MsgReleaseEscrow {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgReleaseEscrow";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string escrow_id = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
  string reason = 4;
}

// MsgReleaseEscrowResponse is the response for MsgReleaseEscrow
message MsgReleaseEscrowResponse {
  string released_amount = 1;
  int64 released_at = 2;
}

// MsgRefundEscrow refunds escrow funds to the depositor
message MsgRefundEscrow {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgRefundEscrow";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string escrow_id = 2;
  string reason = 3;
}

// MsgRefundEscrowResponse is the response for MsgRefundEscrow
message MsgRefundEscrowResponse {
  string refunded_amount = 1;
  int64 refunded_at = 2;
}

// MsgDisputeEscrow marks an escrow as disputed
message MsgDisputeEscrow {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgDisputeEscrow";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string escrow_id = 2;
  string reason = 3;
  string evidence = 4;
}

// MsgDisputeEscrowResponse is the response for MsgDisputeEscrow
message MsgDisputeEscrowResponse {
  int64 disputed_at = 1;
}

// MsgSettleOrder settles an order based on usage records
message MsgSettleOrder {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgSettleOrder";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_id = 2;
  repeated string usage_record_ids = 3;
  bool is_final = 4;
}

// MsgSettleOrderResponse is the response for MsgSettleOrder
message MsgSettleOrderResponse {
  string settlement_id = 1;
  string total_amount = 2;
  string provider_share = 3;
  string platform_fee = 4;
  int64 settled_at = 5;
}

// MsgRecordUsage records usage from a provider
message MsgRecordUsage {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgRecordUsage";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_id = 2;
  string lease_id = 3;
  uint64 usage_units = 4;
  string usage_type = 5;
  int64 period_start = 6;
  int64 period_end = 7;
  cosmos.base.v1beta1.DecCoin unit_price = 8 [(gogoproto.nullable) = false];
  bytes signature = 9;
}

// MsgRecordUsageResponse is the response for MsgRecordUsage
message MsgRecordUsageResponse {
  string usage_id = 1;
  string total_cost = 2;
  int64 recorded_at = 3;
}

// MsgAcknowledgeUsage acknowledges a usage record
message MsgAcknowledgeUsage {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgAcknowledgeUsage";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string usage_id = 2;
  bytes signature = 3;
}

// MsgAcknowledgeUsageResponse is the response for MsgAcknowledgeUsage
message MsgAcknowledgeUsageResponse {
  int64 acknowledged_at = 1;
}

// MsgClaimRewards claims accumulated rewards
message MsgClaimRewards {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "settlement/MsgClaimRewards";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string source = 2;
}

// MsgClaimRewardsResponse is the response for MsgClaimRewards
message MsgClaimRewardsResponse {
  string claimed_amount = 1;
  int64 claimed_at = 2;
}
